ikon-brasil/base/ingress-prd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ikon-brasil-prd-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
spec:
  ingressClassName: nginx
  rules:
    - host: gestao.ikon-br.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ikon-brasil-web
                port:
                  number: 80
